Add charging speed attribute for chargers

--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
       <label for="newWatt" id="consumptionLabel">Consumption (W):</label>
       <input type="number" id="newWatt" step="0.1" placeholder="e.g. 12.5" aria-labelledby="consumptionLabel" />
     </div>
+    <div class="form-row hidden" id="ampField">
+      <label for="newAmp" id="chargingSpeedLabel">Charging Speed (A):</label>
+      <input type="number" id="newAmp" step="0.1" placeholder="e.g. 2" aria-labelledby="chargingSpeedLabel" />
+    </div>
     <div id="cameraFields" class="hidden">
       <div class="camera-subsection">
         <h4 id="powerInputsHeading">Power Inputs</h4>
