--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
         <option value="fiz.cables">FIZ Cable</option>
         <option value="batteries">V-Mount Battery</option>
         <option value="accessories.batteries">Accessory Battery</option>
+        <option value="accessories.cables">Cable</option>
         <option value="accessories.cages">Camera Support</option>
         <option value="accessories.chargers">Charger</option>
       </select>
@@ -544,6 +545,11 @@
         <h4 id="category_accessory_batteries">Accessory Batteries</h4>
         <input type="search" id="accessoryBatteryListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
         <ul id="accessoryBatteryList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
+        <h4 id="category_cables">Cables</h4>
+        <input type="search" id="cableListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="cableList" class="device-ul"></ul>
       </div>
       <div class="device-category">
         <h4 id="category_camera_support">Camera Support</h4>
