Allow selecting multiple lenses and filters

--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
           <option value="59.94">59.94</option>
           <option value="60">60</option>
         </select></label></div>
-      <div class="form-row"><label for="lenses">Lenses:<select id="lenses" name="lenses"></select></label></div>
+      <div class="form-row"><label for="lenses">Lenses:<select id="lenses" name="lenses" multiple size="10"></select></label></div>
       <div class="form-row"><label for="requiredScenarios">What required scenarios do we have for this shoot?
         <select id="requiredScenarios" name="requiredScenarios" multiple size="25">
           <option value="Indoor">Indoor</option>
@@ -966,7 +966,7 @@
         </select>
       </label></div>
       <div class="form-row"><label for="filter">Filter:
-        <select id="filter" name="filter"></select>
+        <select id="filter" name="filter" multiple size="10"></select>
       </label></div>
       <menu>
         <button type="reset" id="projectCancel">Cancel</button>
