Populate codec dropdown from camera data

--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
           <option value="9:16">9:16</option>
           <option value="21:9">21:9</option>
         </select></label></div>
-      <div class="form-row"><label for="codec">Codec:<input type="text" id="codec" name="codec"></label></div>
+      <div class="form-row"><label for="codec">Codec:<select id="codec" name="codec"></select></label></div>
       <div class="form-row"><label for="baseFrameRate">Base Frame Rate:<select id="baseFrameRate" name="baseFrameRate">
           <option value=""></option>
           <option value="23.976">23.976</option>
