--- a/index.html
+++ b/index.html
@@ -881,7 +881,13 @@
           <option value="59.94">59.94</option>
           <option value="60">60</option>
         </select></label></div>
-      <div class="form-row"><label for="lenses">Lenses:<select id="lenses" name="lenses" multiple size="10"></select></label></div>
+      <div class="form-row">
+        <label for="lenses" id="lensesLabel">Lenses:</label>
+        <div class="select-wrapper">
+          <input type="search" id="lensFilter" class="filter-input" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+          <select id="lenses" name="lenses" multiple size="10" aria-labelledby="lensesLabel"></select>
+        </div>
+      </div>
       <div class="form-row"><label for="requiredScenarios">What required scenarios do we have for this shoot?
         <select id="requiredScenarios" name="requiredScenarios" multiple size="25">
           <option value="Indoor">Indoor</option>
