Add required scenarios summary with icons

--- a/index.html
+++ b/index.html
@@ -916,7 +916,9 @@
           <option value="Zoom Remote handle">Zoom Remote handle</option>
           <option value="Dolly Remote handle">Dolly Remote handle</option>
         </select>
-      </label></div>
+      </label>
+      <div id="requiredScenariosSummary" class="scenario-summary" aria-live="polite"></div>
+      </div>
       <div class="form-row"><label for="rigging">How would you like to have your camera rigged?
         <select id="rigging" name="rigging" multiple size="15">
           <option value="Shoulder rig">Shoulder rig</option>
