feat: split gear list and requirements

--- a/index.html
+++ b/index.html
@@ -189,8 +189,10 @@
     <div id="feedbackTableContainer" class="hidden">
       <table id="userFeedbackTable" class="hidden"></table>
     </div>
-    <div id="gearListOutput" class="hidden"></div>
   </section>
+
+  <section id="projectRequirementsOutput" class="hidden"></section>
+  <section id="gearListOutput" class="hidden"></section>
 
   <section id="setupDiagram">
     <h2 id="setupDiagramHeading">Setup Diagram</h2>
