--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
           <ul>
             <li>Plan complete camera rigs and compute power draw and battery life.</li>
             <li>Save multiple setups, export or import them and print overviews.</li>
-            <li>Visualize power and video connections with an interactive diagram—drag to rearrange, zoom and download the layout.</li>
+            <li>Visualize power and video connections with an interactive diagram—drag to rearrange, pan, snap to grid, reset the view, zoom and download the layout.</li>
             <li>Compare battery runtimes and check against safe output limits.</li>
             <li>Customize the device database with your own gear.</li>
             <li>Open a searchable help dialog with step-by-step guides and FAQ.</li>
@@ -656,6 +656,9 @@
           <ul>
             <li>Visualizes power and video connections between selected devices.</li>
             <li>Drag nodes to rearrange the layout; use +/– buttons to zoom.</li>
+            <li>Drag empty space to pan the diagram.</li>
+            <li>Enable <strong>Snap to Grid</strong> to align items precisely.</li>
+            <li>Click <strong>Reset View</strong> to restore the default layout and zoom.</li>
             <li>Export the diagram as SVG or JPG via the <em>Download</em> button.</li>
             <li>Icons denote device types and warn when FIZ brands are incompatible.</li>
             <li>Hover or tap devices to see popup details.</li>
