docs: document gear list feature

--- a/index.html
+++ b/index.html
@@ -607,9 +607,17 @@
             <li><strong>Share Setup Link</strong> copies a URL for the current configuration.</li>
             <li><strong>Clear Current Setup</strong> removes all selected devices.</li>
             <li><strong>Generate Overview</strong> produces a printable summary of any saved setup.</li>
-            <li><strong>Generate Gear List</strong> compiles selected gear and project requirements.</li>
-          </ul>
-        </section>
+            </ul>
+          </section>
+          <section data-help-section id="gearListHelp">
+            <h3><span class="help-icon" aria-hidden="true">📋</span>Gear List</h3>
+            <ul>
+              <li><strong>Generate Gear List</strong> compiles selected gear and project requirements.</li>
+              <li><strong>Save Gear List</strong> stores the current list with the setup.</li>
+              <li><strong>Export Gear List</strong> downloads a JSON file; <strong>Import Gear List</strong> restores it.</li>
+              <li><strong>Delete Gear List</strong> removes the saved list and hides the output.</li>
+            </ul>
+          </section>
         <section data-help-section id="powerCalculator">
           <h3><span class="help-icon" aria-hidden="true">⚡</span>Power Calculator</h3>
           <ul>
