feat: expose grid snap toggle state

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <button id="zoomIn" type="button" title="Zoom in" aria-label="Zoom in">+</button>
       <button id="resetView" type="button">Reset View</button>
       <button id="downloadDiagram" type="button">Download Diagram</button>
-      <button id="gridSnapToggle" type="button">Snap to Grid</button>
+      <button id="gridSnapToggle" type="button" aria-pressed="false">Snap to Grid</button>
     </div>
     <p id="diagramHint" class="diagram-hint"></p>
   </section>
