Use film terminology for cage category

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <option value="batteries">V-Mount Battery</option>
         <option value="accessories.batteries">Accessory Battery</option>
         <option value="accessories.cables">Cable</option>
-        <option value="accessories.cages">Camera Support</option>
+        <option value="accessories.cages">Camera Cage</option>
         <option value="accessories.chargers">Charger</option>
       </select>
     </div>
