Show tripod preferences only when tripod scenario selected

--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
         </select>
       </label></div>
       <div class="form-row"><label for="userButtons">User Buttons:<input type="text" id="userButtons" name="userButtons"></label></div>
-      <div class="form-row"><label for="tripodPreferences">Tripod Preferences:
+      <div class="form-row hidden" id="tripodPreferencesRow"><label for="tripodPreferences">Tripod Preferences:
         <select id="tripodPreferences" name="tripodPreferences" multiple size="13">
           <option value="O'Connor">O'Connor</option>
           <option value="Sachtler">Sachtler</option>
