--- a/index.html
+++ b/index.html
@@ -974,41 +974,52 @@
       <div id="requiredScenariosSummary" class="scenario-summary" aria-live="polite"></div>
       </div>
       <div class="form-row"><label for="rigging">How would you like to have your camera rigged?
-        <select id="rigging" name="rigging" multiple size="15">
+        <select id="rigging" name="rigging" multiple size="12">
           <option value="Shoulder rig">Shoulder rig</option>
           <option value="Hand Grips">Hand Grips</option>
           <option value="Teradek and Battery belt">Teradek and Battery belt</option>
           <option value="Top handle extension">Top handle extension</option>
           <option value="Rear Handle">Rear Handle</option>
-          <option value="Viewfinder + Onboard">Viewfinder + Onboard</option>
-          <option value="VF only">VF only</option>
-          <option value="Onboard only">Onboard only</option>
           <option value="Clamp-On Mattebox">Clamp-On Mattebox</option>
           <option value="Swingaway Mattebox">Swingaway Mattebox</option>
           <option value="Rod based Mattebox">Rod based Mattebox</option>
           <option value="Film magazines">Film magazines</option>
         </select>
       </label></div>
-      <div class="form-row"><label for="monitoringPreferences">Monitoring support:
-        <select id="monitoringPreferences" name="monitoringPreferences" multiple size="18">
-          <option value="VF Clean Feed">VF Clean Feed</option>
-          <option value="Onboard Clean Feed">Onboard Clean Feed</option>
-          <option value="Surroundview (if available)">Surroundview (if available)</option>
-          <option value="Frame Guide: Center Dot">Frame Guide: Center Dot</option>
-          <option value="Frame Guides: Center Cross">Frame Guides: Center Cross</option>
-          <option value="Frame Guide: Rule of Thirds">Frame Guide: Rule of Thirds</option>
-          <option value="Frame Guide: User Box">Frame Guide: User Box</option>
-          <option value="Frame Guide: 90% marker">Frame Guide: 90% marker</option>
-          <option value="Aspect Mask Opacity 100%">Aspect Mask Opacity 100%</option>
-          <option value="AM Opacity 75%">AM Opacity 75%</option>
-          <option value="AM Opacity 50%">AM Opacity 50%</option>
-          <option value="AM Opacity 25%">AM Opacity 25%</option>
-          <option value="AM Opacity 0%">AM Opacity 0%</option>
-          <option value="Directors Monitor 7&quot; handheld">Directors Monitor 7&quot; handheld</option>
-          <option value="Directors Monitor 15-19 inch">Directors Monitor 15-19 inch</option>
-          <option value="Combo Monitor 15-19 inch">Combo Monitor 15-19 inch</option>
-        </select>
-      </label></div>
+      <fieldset>
+        <legend>Monitoring</legend>
+        <div class="form-row"><label for="monitoringVideo">Video distribution:
+          <select id="monitoringVideo" name="monitoringVideo" multiple size="3">
+            <option value="Directors Monitor 7&quot; handheld">Directors Monitor 7&quot; handheld</option>
+            <option value="Directors Monitor 15-19 inch">Directors Monitor 15-19 inch</option>
+            <option value="Combo Monitor 15-19 inch">Combo Monitor 15-19 inch</option>
+          </select>
+        </label></div>
+        <div class="form-row"><label for="monitoringSettings">Camera Monitoring Settings:
+          <select id="monitoringSettings" name="monitoringSettings" multiple size="13">
+            <option value="VF Clean Feed">VF Clean Feed</option>
+            <option value="Onboard Clean Feed">Onboard Clean Feed</option>
+            <option value="Surroundview (if available)">Surroundview (if available)</option>
+            <option value="Frame Guide: Center Dot">Frame Guide: Center Dot</option>
+            <option value="Frame Guides: Center Cross">Frame Guides: Center Cross</option>
+            <option value="Frame Guide: Rule of Thirds">Frame Guide: Rule of Thirds</option>
+            <option value="Frame Guide: User Box">Frame Guide: User Box</option>
+            <option value="Frame Guide: 90% marker">Frame Guide: 90% marker</option>
+            <option value="Aspect Mask Opacity 100%">Aspect Mask Opacity 100%</option>
+            <option value="AM Opacity 75%">AM Opacity 75%</option>
+            <option value="AM Opacity 50%">AM Opacity 50%</option>
+            <option value="AM Opacity 25%">AM Opacity 25%</option>
+            <option value="AM Opacity 0%">AM Opacity 0%</option>
+          </select>
+        </label></div>
+        <div class="form-row"><label for="monitoringConfiguration">Camera Monitoring Configuration:
+          <select id="monitoringConfiguration" name="monitoringConfiguration" multiple size="3">
+            <option value="Viewfinder only">Viewfinder only</option>
+            <option value="Viewfinder and Onboard">Viewfinder and Onboard</option>
+            <option value="Onboard Only">Onboard Only</option>
+          </select>
+        </label></div>
+      </fieldset>
       <div class="form-row"><label for="userButtons">User Buttons:<input type="text" id="userButtons" name="userButtons"></label></div>
       <div class="form-row"><label for="tripodPreferences">Tripod Preferences:
         <select id="tripodPreferences" name="tripodPreferences" multiple size="13">
