feat: allow multiple aspect ratios

--- a/index.html
+++ b/index.html
@@ -911,8 +911,7 @@
           <option value="16K">16K</option>
         </select></label></div>
       <div class="form-row"><label for="sensorMode">Sensor Mode:<select id="sensorMode" name="sensorMode"></select></label></div>
-      <div class="form-row"><label for="aspectRatio">Aspect Ratio:<select id="aspectRatio" name="aspectRatio">
-          <option value=""></option>
+      <div class="form-row"><label for="aspectRatio">Aspect Ratio:<select id="aspectRatio" name="aspectRatio" multiple size="10">
           <option value="16:9">16:9</option>
           <option value="17:9">17:9</option>
           <option value="4:3">4:3</option>
