Split user buttons into dedicated fields

--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,9 @@
           <option value="IOS Video (Teradek Serv + Link)">IOS Video (Teradek Serv + Link)</option>
         </select>
       </label></div>
-      <div class="form-row"><label for="userButtons">User Buttons:<input type="text" id="userButtons" name="userButtons"></label></div>
+      <div class="form-row"><label for="onboardMonitorUserButtons">Onboard Monitor User Buttons:<input type="text" id="onboardMonitorUserButtons" name="onboardMonitorUserButtons"></label></div>
+      <div class="form-row"><label for="cameraUserButtons">Camera User Buttons:<input type="text" id="cameraUserButtons" name="cameraUserButtons"></label></div>
+      <div class="form-row"><label for="viewfinderUserButtons">Viewfinder User Buttons:<input type="text" id="viewfinderUserButtons" name="viewfinderUserButtons"></label></div>
       <div class="form-row hidden" id="tripodPreferencesRow"><label for="tripodPreferences">Tripod Preferences:
         <select id="tripodPreferences" name="tripodPreferences" multiple size="13">
           <option value="O'Connor">O'Connor</option>
