feat: expand aspect ratio options

--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
           <option value="16K">16K</option>
         </select></label></div>
       <div class="form-row"><label for="sensorMode">Sensor Mode:<select id="sensorMode" name="sensorMode"></select></label></div>
-      <div class="form-row"><label for="aspectRatio">Aspect Ratio:<select id="aspectRatio" name="aspectRatio" multiple size="10">
+        <div class="form-row"><label for="aspectRatio">Aspect Ratio:<select id="aspectRatio" name="aspectRatio" multiple size="20">
           <option value="16:9">16:9</option>
           <option value="17:9">17:9</option>
           <option value="4:3">4:3</option>
@@ -922,6 +922,16 @@
           <option value="2:1">2:1</option>
           <option value="9:16">9:16</option>
           <option value="21:9">21:9</option>
+          <option value="1.37:1">1.37:1</option>
+          <option value="1.66:1">1.66:1</option>
+          <option value="1.90:1">1.90:1</option>
+          <option value="2.20:1">2.20:1</option>
+          <option value="2.35:1">2.35:1</option>
+          <option value="2.40:1">2.40:1</option>
+          <option value="2.76:1">2.76:1</option>
+          <option value="4:5">4:5</option>
+          <option value="5:4">5:4</option>
+          <option value="16:10">16:10</option>
         </select></label></div>
       <div class="form-row"><label for="codec">Codec:<select id="codec" name="codec"></select></label></div>
       <div class="form-row"><label for="baseFrameRate">Base Frame Rate:<select id="baseFrameRate" name="baseFrameRate">
