Hide dolly remote until dolly scenario selected

--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
           <option value="Bodenspinne">Bodenspinne</option>
           <option value="Mittelspinne">Mittelspinne</option>
           <option value="Zoom Remote handle">Zoom Remote handle</option>
-          <option value="Dolly Remote handle">Dolly Remote handle</option>
+          <option value="Dolly Remote handle" hidden>Dolly Remote handle</option>
         </select>
       </label></div>
       <div class="form-row"><label for="filter">Filter:
