Add test ensuring wireless receivers script included

--- a/index.html
+++ b/index.html
@@ -1240,6 +1240,7 @@
   <script src="devices/batteries.js"></script>
   <script src="devices/cages.js"></script>
   <script src="devices/gearList.js"></script>
+  <script src="devices/wirelessReceivers.js"></script>
   <script src="storage.js"></script>
   <script src="translations.js"></script>
   <script src="lz-string.min.js"></script>
