feat: add viewfinder extension control

--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,6 @@
           <option value="Extreme heat">Extreme heat</option>
           <option value="Rain Machine">Rain Machine</option>
           <option value="Slow Motion">Slow Motion</option>
-          <option value="Viewfinder Extension">Viewfinder Extension</option>
         </select>
         <div id="requiredScenariosSummary" class="scenario-summary" aria-live="polite"></div>
       </div>
@@ -1027,6 +1026,13 @@
           <option value="Clamp-On Mattebox">Clamp-On Mattebox</option>
           <option value="Swingaway Mattebox">Swingaway Mattebox</option>
           <option value="Rod based Mattebox">Rod based Mattebox</option>
+        </select>
+      </div>
+      <div class="form-row hidden" id="viewfinderExtensionRow">
+        <label for="viewfinderExtension" id="viewfinderExtensionLabel">Viewfinder Extension:</label>
+        <select id="viewfinderExtension" name="viewfinderExtension">
+          <option value=""></option>
+          <option value="Viewfinder Extension">Viewfinder Extension</option>
         </select>
       </div>
       <h3 id="monitoringHeading">Monitoring</h3>
