docs: clarify gear list form duplication

--- a/index.html
+++ b/index.html
@@ -658,6 +658,7 @@
               <li>The <strong>Save Gear List</strong> button stores the current list with the project.</li>
               <li>The <strong>Export Gear List</strong> button downloads a JSON file, and <strong>Import Gear List</strong> restores it.</li>
               <li>The <strong>Delete Gear List</strong> button removes the saved list and hides the output.</li>
+              <li>Gear list forms use fork buttons to duplicate your entries instantly.</li>
             </ul>
           </section>
         <section data-help-section id="powerCalculator">
