Show all user button options

--- a/index.html
+++ b/index.html
@@ -1074,15 +1074,15 @@
       </div>
       <div class="form-row">
         <label for="monitorUserButtons">Onboard Monitor User Buttons:</label>
-        <select id="monitorUserButtons" name="monitorUserButtons" multiple size="5"></select>
+        <select id="monitorUserButtons" name="monitorUserButtons" multiple></select>
       </div>
       <div class="form-row">
         <label for="cameraUserButtons">Camera User Buttons:</label>
-        <select id="cameraUserButtons" name="cameraUserButtons" multiple size="5"></select>
+        <select id="cameraUserButtons" name="cameraUserButtons" multiple></select>
       </div>
       <div class="form-row">
         <label for="viewfinderUserButtons">Viewfinder User Buttons:</label>
-        <select id="viewfinderUserButtons" name="viewfinderUserButtons" multiple size="5"></select>
+        <select id="viewfinderUserButtons" name="viewfinderUserButtons" multiple></select>
       </div>
       <div class="form-row hidden" id="tripodPreferencesRow">
         <strong>Tripod Preferences:</strong>
