Replace power diagram labels with color legend

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
     </ul>
     <div id="powerDiagram" class="hidden">
       <div id="powerDiagramBar" class="power-bar" role="img" aria-label="Power usage diagram"></div>
+      <div id="powerDiagramLegend"></div>
       <p id="maxPowerText"></p>
     </div>
     <p><strong><span id="totalPowerLabel">Total Consumption:</span></strong> <span id="totalPower">0.0</span> W</p>
