feat: polish header design

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div id="offlineIndicator" role="status" aria-live="polite">Offline</div>
   <header id="topBar">
     <h1 id="mainTitle">Cine List</h1>
-    <div class="controls">
+    <nav class="controls" aria-label="Main controls">
       <select id="languageSelect" aria-label="Select language">
         <option value="en">English</option>
         <option value="de">Deutsch</option>
@@ -42,7 +42,7 @@
       <button id="pinkModeToggle" title="Toggle pink mode" aria-label="Toggle pink mode" aria-pressed="false">🐴</button>
       <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help (press ?, H, F1 or Ctrl+/)">?</button>
       <button id="reloadButton" title="Force reload" aria-label="Force reload">🔄</button>
-    </div>
+    </nav>
   </header>
 
   <main id="mainContent" tabindex="-1">
