docs: expand gear list help

--- a/index.html
+++ b/index.html
@@ -673,9 +673,16 @@
         </section>
         <section data-help-section id="gearListHelp">
           <h3><span class="help-icon" aria-hidden="true">📋</span>Gear List</h3>
-          <ul>
-            <li>The <strong>Generate Gear List</strong> button compiles selected gear and project requirements.</li>
-            <li>The <strong>Save Gear List</strong> button stores the current list with the project.</li>
+            <ul>
+              <li>The <strong>Generate Gear List</strong> button compiles selected gear and project requirements into a table.</li>
+              <li>Items are grouped by category (camera, lens, power, monitoring, accessories) with duplicates merged and counted.</li>
+              <li>The generator auto-adds required cables, rigging and accessories for monitors, motors, gimbals and weather scenarios.</li>
+              <li>Scenario selections (e.g. Handheld, Gimbal, Outdoor) inject related gear such as Easyrig parts, gimbal filters or rain protection.</li>
+              <li>Lens choices append front diameter, weight and rod requirements, add lens supports and matte box components, and warn about incompatible rod standards.</li>
+              <li>Battery entries reflect counts from the power calculator and include hotswap plates or selected hotswap devices when needed.</li>
+              <li>Monitoring preferences provide default monitors for each role (Director, DoP, etc.) and include cable sets for every screen.</li>
+              <li>All items are sorted alphabetically within their category for clarity.</li>
+              <li>The <strong>Save Gear List</strong> button stores the current list with the project.</li>
               <li>The <strong>Export Gear List</strong> button downloads a JSON file, and <strong>Import Gear List</strong> restores it.</li>
               <li>The <strong>Delete Gear List</strong> button removes the saved list and hides the output.</li>
               <li>Gear list forms use fork buttons to duplicate your entries instantly.</li>
