docs: expand gear list help section

--- a/index.html
+++ b/index.html
@@ -675,6 +675,7 @@
           <h3><span class="help-icon" aria-hidden="true">📋</span>Gear List</h3>
             <ul>
               <li>The <strong>Generate Gear List</strong> button compiles selected gear and project requirements into a table.</li>
+              <li>Once generated, the list refreshes automatically when device selections or project requirements change.</li>
               <li>Items are grouped by category (camera, lens, power, monitoring, accessories) with duplicates merged and counted.</li>
               <li>The generator auto-adds required cables, rigging and accessories for monitors, motors, gimbals and weather scenarios.</li>
               <li>Scenario selections (e.g. Handheld, Gimbal, Outdoor) inject related gear such as Easyrig parts, gimbal filters or rain protection.</li>
@@ -682,6 +683,8 @@
               <li>Battery entries reflect counts from the power calculator and include hotswap plates or selected hotswap devices when needed.</li>
               <li>Monitoring preferences provide default monitors for each role (Director, DoP, etc.) and include cable sets for every screen.</li>
               <li>All items are sorted alphabetically within their category for clarity.</li>
+              <li>Each item exposes a tooltip on hover with a brief description or specification.</li>
+              <li>The gear list is included in printable overviews and shared setup links so collaborators see the full context.</li>
               <li>The <strong>Save Gear List</strong> button stores the current list with the project.</li>
               <li>The <strong>Export Gear List</strong> button downloads a JSON file, and <strong>Import Gear List</strong> restores it.</li>
               <li>The <strong>Delete Gear List</strong> button removes the saved list and hides the output.</li>
