Add missing device categories

--- a/index.html
+++ b/index.html
@@ -236,11 +236,13 @@
         <option value="viewfinders">Viewfinder</option>
         <option value="monitors">Monitor</option>
         <option value="video">Wireless Video</option>
+        <option value="wirelessReceivers">Wireless Receiver</option>
         <option value="fiz.motors">FIZ Motor</option>
         <option value="fiz.controllers">FIZ Controller</option>
         <option value="fiz.distance">FIZ Distance</option>
         <option value="fiz.cables">FIZ Cable</option>
         <option value="batteries">V-Mount Battery</option>
+        <option value="batteryHotswaps">Battery Hotswap</option>
         <option value="accessories.batteries">Accessory Battery</option>
         <option value="accessories.cables">Cable</option>
         <option value="accessories.cages">Camera Cage</option>
