Enhance GDPR compliance

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Datenschutz</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self'; img-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'; manifest-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none';" />
+  <meta name="referrer" content="no-referrer" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +13,7 @@
     <p>Diese Anwendung verarbeitet keine personenbezogenen Daten auf Servern. Alle Einstellungen und Projekte werden ausschließlich lokal im Browser gespeichert und können dort jederzeit gelöscht werden.</p>
     <p>Beim Teilen eines Projekts wird die Konfiguration nur in der URL kodiert und nicht auf einem Server gespeichert.</p>
     <p>Es werden keine Cookies, Tracking- oder Analyse-Dienste eingesetzt.</p>
+    <p>Wenn Sie im Feedback-Formular die Funktion „Aktuellen Standort verwenden“ nutzen, wird Ihr Standort einmalig über die Geolocation-API Ihres Browsers ermittelt. Die Daten werden nicht übertragen und verbleiben ausschließlich lokal.</p>
     <p>Bei Fragen wenden Sie sich bitte über die im <a href="impressum.html">Impressum</a> genannten Kontaktmöglichkeiten an uns.</p>
   </main>
 </body>
