--- a/impressum.html
+++ b/impressum.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Impressum</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self'; img-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'; manifest-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none';" />
+  <meta name="referrer" content="no-referrer" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,7 +12,7 @@
     <h1>Impressum</h1>
     <p>Angaben gemäß § 5 TMG</p>
     <p>Cine List – Open-Source-Projekt</p>
-    <p>Kontakt: Bitte nutzen Sie die <a href="https://github.com/">GitHub Issues</a> des Projekts.</p>
+    <p>Kontakt: Bitte nutzen Sie die <a href="https://github.com/" rel="noreferrer noopener">GitHub Issues</a> des Projekts.</p>
     <p>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
     Cine List Maintainer</p>
     <p>Dieses Projekt dient ausschließlich zu Informationszwecken und bietet keine kommerziellen Dienstleistungen an.</p>
