Add personal Impressum and privacy policy

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -10,12 +10,32 @@
 <body>
   <main>
     <h1>Datenschutzerklärung</h1>
-    <p>Diese Anwendung verarbeitet keine personenbezogenen Daten auf Servern. Alle Einstellungen und Projekte werden ausschließlich lokal im Browser gespeichert und können dort jederzeit gelöscht werden.</p>
-    <p>Beim Teilen eines Projekts wird die Konfiguration nur in der URL kodiert und nicht auf einem Server gespeichert.</p>
-    <p>Es werden keine Cookies, Tracking- oder Analyse-Dienste eingesetzt.</p>
-    <p>Wenn Sie im Feedback-Formular die Funktion „Aktuellen Standort verwenden“ nutzen, wird Ihr Standort einmalig über die Geolocation-API Ihres Browsers ermittelt. Die Daten werden nicht übertragen und verbleiben ausschließlich lokal.</p>
-    <p>Bei Fragen wenden Sie sich bitte über die im <a href="impressum.html">Impressum</a> genannten Kontaktmöglichkeiten an uns.</p>
+    <h2>Verantwortliche Stelle</h2>
+    <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München<br>E-Mail: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
+    <h2>Erhebung und Speicherung personenbezogener Daten sowie Art und Zweck von deren Verwendung</h2>
+    <p><strong>Beim Besuch der Website:</strong> Der Provider dieser Seite erhebt und speichert automatisch Informationen in sogenannten Server-Log-Dateien, die Ihr Browser automatisch übermittelt (z. B. IP-Adresse, Datum und Uhrzeit der Anfrage, Referrer-URL, verwendeter Browser). Diese Daten dienen ausschließlich zur Gewährleistung eines störungsfreien Betriebs und zur Verbesserung des Angebots. Eine Zuordnung zu bestimmten Personen findet nicht statt.</p>
+    <p><strong>Bei Kontaktaufnahme per E-Mail:</strong> Die von Ihnen übermittelten personenbezogenen Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.</p>
+    <h2>Weitergabe von Daten</h2>
+    <p>Eine Übermittlung Ihrer persönlichen Daten an Dritte zu anderen als den im Folgenden aufgeführten Zwecken findet nicht statt. Wir geben Ihre persönlichen Daten nur an Dritte weiter, wenn:</p>
+    <ul>
+      <li>Sie Ihre ausdrückliche Einwilligung dazu erteilt haben,</li>
+      <li>die Verarbeitung zur Abwicklung eines Vertrags erforderlich ist,</li>
+      <li>die Verarbeitung zur Erfüllung einer rechtlichen Verpflichtung erforderlich ist.</li>
+    </ul>
+    <h2>Cookies</h2>
+    <p>Diese Website verwendet Cookies. Cookies richten auf Ihrem Rechner keinen Schaden an und enthalten keine Viren. Sie dienen dazu, unser Angebot nutzerfreundlicher, effektiver und sicherer zu machen. Die meisten der von uns verwendeten Cookies sind „Session-Cookies“, die nach Ende Ihres Besuchs automatisch gelöscht werden. Sie können Ihren Browser so einstellen, dass Sie über das Setzen von Cookies informiert werden und Cookies nur im Einzelfall erlauben.</p>
+    <h2>Betroffenenrechte</h2>
+    <p>Sie haben das Recht:</p>
+    <ul>
+      <li>gemäß Art. 15 DSGVO Auskunft über Ihre von uns verarbeiteten personenbezogenen Daten zu verlangen,</li>
+      <li>gemäß Art. 16 DSGVO die Berichtigung unrichtiger oder Vervollständigung Ihrer bei uns gespeicherten personenbezogenen Daten zu verlangen,</li>
+      <li>gemäß Art. 17 DSGVO die Löschung Ihrer bei uns gespeicherten personenbezogenen Daten zu verlangen, sofern nicht gesetzliche Verpflichtungen entgegenstehen,</li>
+      <li>gemäß Art. 18 DSGVO die Einschränkung der Verarbeitung Ihrer personenbezogenen Daten zu verlangen,</li>
+      <li>gemäß Art. 20 DSGVO Ihre personenbezogenen Daten in einem strukturierten, gängigen und maschinenlesbaren Format zu erhalten oder die Übermittlung an einen anderen Verantwortlichen zu verlangen.</li>
+    </ul>
+    <h2>Beschwerderecht bei der zuständigen Aufsichtsbehörde</h2>
+    <p>Im Falle datenschutzrechtlicher Verstöße steht Ihnen ein Beschwerderecht bei einer Aufsichtsbehörde zu. Zuständige Aufsichtsbehörde ist der Landesdatenschutzbeauftragte des Bundeslandes, in dem unser Unternehmen seinen Sitz hat.</p>
+    <p>Diese Datenschutzerklärung ist ein allgemeines Muster und ersetzt keine individuelle Rechtsberatung.</p>
   </main>
 </body>
 </html>
-
