feat: add top bar search

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       <img src="icon.svg" alt="" id="logo" />
       <h1 id="mainTitle">Cine List</h1>
     </div>
+    <div class="feature-search">
+      <input type="search" id="featureSearch" list="featureList" placeholder="Search features..." aria-label="Search features and help" />
+      <datalist id="featureList"></datalist>
+    </div>
     <nav class="controls" aria-label="Main controls">
       <select id="languageSelect" aria-label="Select language">
         <option value="en">English</option>
