refactor: organize repo structure

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Cine List" />
   <meta property="og:description" content="Plan your camera project and calculate power consumption &amp; battery life." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="icon.png" />
+  <meta property="og:image" content="../icon.png" />
   <meta name="theme-color" content="#f9f9f9" />
   <meta name="application-name" content="Cine List" />
   <meta name="apple-mobile-web-app-title" content="Cine List" />
@@ -18,19 +18,19 @@
   <meta name="referrer" content="no-referrer" />
   <meta name="color-scheme" content="light dark" />
   <title>Cine List</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="overview-print.css" media="print" />
-  <link rel="icon" href="icon.svg" type="image/svg+xml" />
-  <link rel="icon" href="icon.png" type="image/png" />
-  <link rel="apple-touch-icon" href="icon.png" />
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles/overview-print.css" media="print" />
+  <link rel="icon" href="../icon.svg" type="image/svg+xml" />
+  <link rel="icon" href="../icon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="../icon.png" />
+  <link rel="manifest" href="../manifest.webmanifest">
 </head>
 <body>
   <a href="#mainContent" class="skip-link" id="skipLink">Skip to content</a>
   <div id="offlineIndicator" role="status" aria-live="polite">Offline</div>
   <header id="topBar">
     <div class="branding">
-      <img src="icon.svg" alt="" id="logo" />
+      <img src="../icon.svg" alt="" id="logo" />
       <h1 id="mainTitle">Cine List</h1>
     </div>
     <div class="feature-search">
@@ -1332,21 +1332,21 @@
     </datalist>
   </dialog>
   <dialog id="overviewDialog"></dialog>
-  <script src="globalthis-polyfill.js"></script>
-  <script src="devices/index.js"></script>
-  <script src="devices/cameras.js"></script>
-  <script src="devices/monitors.js"></script>
-  <script src="devices/video.js"></script>
-  <script src="devices/fiz.js"></script>
-  <script src="devices/batteries.js"></script>
-  <script src="devices/batteryHotswaps.js"></script>
-  <script src="devices/cages.js"></script>
-  <script src="devices/gearList.js"></script>
-  <script src="devices/wirelessReceivers.js"></script>
-  <script src="storage.js"></script>
-  <script src="translations.js"></script>
-  <script src="lz-string.min.js"></script>
-  <script src="script.js"></script>
-  <script src="overview.js"></script>
+  <script src="js/globalthis-polyfill.js"></script>
+  <script src="../devices/index.js"></script>
+  <script src="../devices/cameras.js"></script>
+  <script src="../devices/monitors.js"></script>
+  <script src="../devices/video.js"></script>
+  <script src="../devices/fiz.js"></script>
+  <script src="../devices/batteries.js"></script>
+  <script src="../devices/batteryHotswaps.js"></script>
+  <script src="../devices/cages.js"></script>
+  <script src="../devices/gearList.js"></script>
+  <script src="../devices/wirelessReceivers.js"></script>
+  <script src="../storage.js"></script>
+  <script src="../translations.js"></script>
+  <script src="../lz-string.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/overview.js"></script>
 </body>
 </html>
