Fix hidden battery comparison table

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
   <section id="gearListOutput" class="hidden"></section>
 
-  <section id="batteryComparison" class="hidden">
+  <section id="batteryComparison" style="display: none;">
     <h2 id="batteryComparisonHeading">Battery Comparison</h2>
     <div id="batteryTableContainer">
       <table id="batteryTable"></table>
